--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,14 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+/* Hide number input arrows */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
